...
    (FeatureId.schedule, FeatureQueryView.scheduleWeeks) => '选择教学周',
    (FeatureId.bykc, FeatureQueryView.summary) => '选择课程',
    (FeatureId.bykc, FeatureQueryView.bykcDetail) => '课程详情',
    (FeatureId.bykc, FeatureQueryView.bykcChosenCourses) => '我的课程',
    (FeatureId.bykc, FeatureQueryView.bykcStatistics) => '课程统计',
    (FeatureId.bykc, FeatureQueryView.bykcProfile) => '博雅资料',
    (FeatureId.cgyy, FeatureQueryView.cgyyOrders) => '我的预约',
    (FeatureId.cgyy, FeatureQueryView.cgyyOrderDetail) => '预约详情',
    (FeatureId.cgyy, FeatureQueryView.cgyyLockCode) => '门锁状态',
    (FeatureId.cgyy, FeatureQueryView.cgyyPurposeTypes) => '用途类型',
    (FeatureId.cgyy, _) => '预约研讨室',
    (FeatureId.libbook, FeatureQueryView.libbookBookings) => '我的座位预约',
    (FeatureId.libbook, _) => '预约座位',
    (FeatureId.spoc, FeatureQueryView.spocDetail) ||
    (FeatureId.judge, FeatureQueryView.judgeDetail) => '作业详情',
    (FeatureId.judge, FeatureQueryView.judgeBatchDetails) => '所选作业详情',
    _ => feature.title,
  };
}
...
