...
  FeatureId.cgyy,
  FeatureId.ygdk,
];

extension FeatureIdText on FeatureId {
  String get title => switch (this) {
    FeatureId.schedule => '课表查询',
    FeatureId.exam => '考试查询',
    FeatureId.grades => '成绩查询',
    FeatureId.bykc => '博雅课程',
    FeatureId.classroom => '空教室查询',
    FeatureId.spoc => 'SPOC作业',
    FeatureId.judge => '希冀作业',
...
